Fixed overlapping issues with the grids.
Went in and fixed how the page handles overlapping content. I will
probably stop this project here as I feel like I've learned a lot of how
the grid and flexbox work together. For future projects ensure you think
more of how to stop this overflow before you go too deep in.
Learning when to use auto-fit and auto-fill are also essential.

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ html {
 	grid-template-columns: 0.2fr 1fr;
 	text-align: left;
 	align-items: center;
-	font-size: 1.5rem;
+	font-size: 1.3rem;
 	column-gap: 10px;
 }
 
@@ -97,9 +97,10 @@ html {
 
 .menu {
 	display: grid;
-	grid-template-columns: 1fr 1fr 1fr;
-	grid-template-rows: 0.1fr repeat(auto, auto);
+	grid-template-columns: repeat(3, minmax(150px, 1fr));
+	grid-template-rows: 0.1fr repeat(auto-fill, minmax(200px, 330px));
 	gap: 10px;
+
 }
 
 .menu-header {
@@ -117,7 +118,7 @@ html {
 	grid-row: 2 / 7;
 
 	display: grid;
-	grid-template-columns: repeat(auto-fit, 330px);
+	grid-template-columns: repeat(2, minmax(130px, 1fr));
 	grid-template-rows: repeat(3, 1fr);
 
 	gap: 20px;
@@ -172,7 +173,7 @@ html {
 	grid-row: 5 / 7;
 }
 
-.news{
+.news {
 	height: 100%;
 }
 
